Make the home link on the 404 page actually visible as a link.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -54,6 +54,11 @@ a {
     text-decoration: none;
 }
 
+.not-found-page a{
+    text-decoration: underline;
+    color: var(--color-primary2);
+}
+
 p {
     margin-top: 8px;
     margin-bottom: 8px;
