--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,7 +59,8 @@ a {
     text-decoration: none;
 }
 
-.not-found-page a {
+.not-found-page a,
+a.visible-link {
     text-decoration: underline;
     color: var(--color-primary2);
 }
@@ -689,6 +690,12 @@ table.charity-choice-table button {
 
 .faq-list .faq-answer {
     margin-bottom: 1em;
+}
+
+.faq-charities-donr-letter{
+    margin-left: 1.5em;
+    padding: 0.8em;
+    border: 1px solid var(--color-text-label);
 }
 
 
