integration with RSM

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,7 +4,7 @@
     --color-text-inverted: rgba(255, 255, 255, 0.87);
 
     --color-primary: rgba(1, 18, 51, 1);
-    --color-primary2: rgba(19, 60, 85, 1);
+    --color-primary2: rgb(18, 58, 83);
     --color-primary3: rgba(50, 74, 95, 1);
     --color-primary4: rgb(155, 170, 182);
     --color-accent: rgb(136, 241, 255);
